<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Dashboard">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toolbartitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:gravity="center_vertical|left"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/toolbar_title" />

                <TextView
                    android:id="@+id/group_Btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:text="@string/add_user_icon"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/toolbar_icon" />

                <TextView
                    android:id="@+id/refreshBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:text="@string/refresh_icon"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/toolbar_icon" />

                <TextView
                    android:id="@+id/editBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:text="@string/edit_icon"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/toolbar_icon" />

                <TextView
                    android:id="@+id/searchBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:text="@string/search_icon"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/toolbar_icon" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <include layout="@layout/search_toolbar" />
        <include layout="@layout/edit_toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_dashboard" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@color/colorWhite"
        app:srcCompat="@drawable/ic_action_name" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>