<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="add_details"
            type="com.globalspace.miljonsales.ui.add_details.AddDetailsViewModel" />

    </data>

    <!--  <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/white"
          android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
          tools:context=".ui.add_details.AddDetailsFragment">-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
            tools:context=".ui.add_details.AddDetailsFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinp_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/hint_name"
                app:boxStrokeColor="@color/colorPrimary"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:lines="1"
                    android:text="@={add_details.strname}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinp_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/hint_address"
                app:boxStrokeColor="@color/colorPrimary"
                app:counterEnabled="true"
                app:counterMaxLength="5000"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="wrap"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textinp_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_my_location"
                    android:drawablePadding="12dp"
                    android:inputType="textMultiLine"
                    android:maxLength="5000"
                    android:maxLines="4"
                    android:scrollbars="vertical"
                    android:text="@={add_details.straddress}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinp_state"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/hint_state"
                app:boxStrokeColor="@color/colorPrimary"
                app:endIconDrawable="@drawable/ic_arrow_drop_down"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textinp_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinp_city"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/hint_city"
                app:boxStrokeColor="@color/colorPrimary"
                app:endIconDrawable="@drawable/ic_arrow_drop_down"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textinp_state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinp_pincode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/hint_pincode"
                app:boxStrokeColor="@color/colorPrimary"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textinp_city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="6"
                    android:text="@={add_details.strpincode}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinp_hospital"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/hint_hospital"
                app:boxStrokeColor="@color/colorPrimary"
                app:endIconDrawable="@drawable/ic_arrow_drop_down"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textinp_pincode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_hospital"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinp_rooms"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/hint_rooms"
                app:boxStrokeColor="@color/colorPrimary"
                app:errorEnabled="true"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textinp_hospital">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_rooms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:lines="1"
                    android:text="@={add_details.strrooms}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvborad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:drawableEnd="@drawable/ic_baseline_photo_camera_24"
                android:text="@string/hint_boardimage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textinp_rooms" />

            <ImageView
                android:id="@+id/img_viewer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvborad" />

            <TextView
                android:id="@+id/tvphysician"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                android:drawableEnd="@drawable/ic_baseline_photo_camera_24"
                android:text="@string/hint_phyimg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_viewer" />

            <ImageView
                android:id="@+id/img_viewer_phy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvphysician" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinp_beds"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_beds"
                app:boxStrokeColor="@color/colorPrimary"
                app:errorEnabled="true"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_viewer_phy">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_beds"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:lines="1"
                    android:text="@={add_details.strbeds}" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/address_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/textinp_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textinp_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <!--   </FrameLayout>-->
</layout>