<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activity.POBActivity">

    <include layout="@layout/toolbar" />

    <include
        layout="@layout/search_toolbar"
        android:visibility="gone" />


    <androidx.cardview.widget.CardView
        android:id="@+id/filterCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/selectDateLL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/calIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:text="@string/calender_icon"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/selectDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Select Date"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/closeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/close_icon"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/filterIconLL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/filterIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:text="@string/filter_icon"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Filter"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/totalCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorWhite"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Total Amount"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pobList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>